Fixing APICaller deprecated function